# classicube-cef-plugin

./: .gitignore  Cargo.toml  Cross.toml  README.md  TODO  build.rs  cef_binary_version  cross-aarch64.Dockerfile  cross-armhf.Dockerfile  flake.nix  replace-versions.fish  rustfmt.toml
.cargo/: config  config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: cross-aarch64.Dockerfile  cross-armhf.Dockerfile  cross-podman.Dockerfile  cross-x86_64.Dockerfile  dependabot.yml  flake.nix  format-release.js  get-latest-cef-version.mjs  renovate.json
.github/workflows/: build.yml  release.yml  rust.yml  update-cef-version.yml  update-lock-files.yml
cef_interface/: CMakeLists.txt  app.cc  app.hh  cef_exe.cc  client.cc  client.hh  interface.cc  interface.hh  render_handle.cc  render_handler.cc  render_handler.hh  serialize.cc  serialize.hh
proc-todo/: Cargo.toml
proc-todo/src/: lib.rs
src/: -lib.rs  async_manager.rs  bindings.rs  cef.rs  cef_exe.rs  error.rs  helpers.rs  interface.rs  lib.rs  logger.rs  macros.rs  main.rs  options.rs  owned_entity.rs  owned_model.rs  panic.rs  plugin.rs  yt_player.html
src/api/: youtube.rs
src/async_manager/: mod.rs
src/cef/: bindings.rs  browser.rs  cef_paint.rs  chat.rs  chat_command.rs  entity.rs  javascript.rs  mod.rs  model.rs  mute_lose_focus.rs  render_model.rs
src/cef/async_manager/: mod.rs
src/cef/bindings/: generated.rs  generated_mock.rs  mod.rs
src/cef/chat/: chat_command.rs  mod.rs
src/cef/entity_manager/: cef_paint.rs  context_handler.rs  entity.rs  mod.rs  model.rs  render_model_detour.rs
src/cef/interface/: bindings.rs  mod.rs
src/chat/: chat_command.rs  helpers.rs  hidden_communication.rs  mod.rs
src/chat/commands/: global.rs  helpers.rs  local.rs  mod.rs  options.rs  options_commands.rs  screen.rs  screen_commands.rs  self_commands.rs  static_commands.rs
src/chat/hidden_communication/: clients.rs  encoding.rs  global_control.rs  map_themes.rs  mod.rs
src/chat/hidden_communication/whispers/: encoding.rs  incoming.rs  mod.rs  outgoing.rs
src/entity_manager/: cef_paint.rs  context_handler.rs  entity.rs  entity_builder.rs  helpers.rs  mod.rs  model.rs  render_model_detour.rs  render_model_hook.rs
src/options/: mod.rs  rust_option.rs
src/player/: builder.rs  helpers.rs  mod.rs  url_aliases.rs  volume_fade.rs  web.rs
src/player/dash/: mod.rs
src/player/hls/: mod.rs  page.html
src/player/image/: mod.rs  page.html
src/player/media/: mod.rs  page.html
src/player/youtube/: mod.rs  page.html
src/players/: helpers.rs  mod.rs  mute_lose_focus.rs  volume_fade.rs  web.rs
src/players/dash/: mod.rs  page.html
src/players/media/: mod.rs  page.html
src/players/youtube/: mod.rs  page.html
src/search/: youtube.rs
tests/: cef.rs
