[package]
name = "classicube-cef-plugin"
version = "1.15.53"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "cef"
path = "src/cef_exe.rs"


[dependencies]
async-dispatcher = { git = "https://github.com/SpiralP/rust-async-dispatcher.git", branch = "main" }
async-recursion = "=1.1.1"
backtrace = "=0.3.76"
base64 = "=0.22.1"
bincode = { version = "=2.0.1", features = ["serde"] }
clap = { git = "https://github.com/SpiralP/rust-clap-classicube.git", branch = "master", features = [
    "derive",
] }
classicube-helpers = { git = "https://github.com/SpiralP/rust-classicube-helpers.git", branch = "main" }
classicube-sys = "=4.3.0"
deunicode = "=1.6.2"
error-chain = "=0.12.4"
futures = "=0.3.31"
futures-timer = "=3.0.3"
lazy_static = "=1.5.0"
ncollide3d = "=0.33.0"
rand = "=0.9.2"
regex = "=1.12.3"
reqwest = { version = "=0.13.2", features = ["query"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
tokio = { version = "=1.48.0", features = ["full"] }
tracing = "=0.1.44"
tracing-appender = "=0.2.4"
tracing-flame = "=0.2.0"
tracing-futures = "=0.2.5"
tracing-subscriber = { version = "=0.3.22", features = ["env-filter"] }
url = "=2.5.8"
zstd = "=0.13.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "=0.62.2", features = [
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
] }

[build-dependencies]
bindgen = "=0.72.1"
cc = "=1.2.55"
cmake = "=0.1.57"

[features]
ci = []


[package.metadata.release]
pre-release-commit-message = "Release {{version}}"
tag-message = "Release version {{version}}"
