[package]
name = "classicube-cef-plugin"
version = "2.0.18"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "cef"
path = "src/cef_exe.rs"


[dependencies]
async-dispatcher = { git = "https://github.com/SpiralP/rust-async-dispatcher.git" }
async-recursion = "=1.1.1"
backtrace = "=0.3.76"
base64 = "=0.22.1"
bincode = { version = "=2.0.1", features = ["serde"] }
clap = { git = "https://github.com/SpiralP/rust-clap-classicube.git", features = [
    "derive",
] }
classicube-helpers = { git = "https://github.com/SpiralP/rust-classicube-helpers.git" }
classicube-sys = "=6.0.4"
deunicode = "=1.6.2"
error-chain = "=0.12.4"
futures = "=0.3.32"
futures-timer = "=3.0.4"
lazy_static = "=1.5.0"
ncollide3d = "=0.33.0"
rand = "=0.10.1"
regex = "=1.12.4"
reqwest = { version = "=0.13.4", features = ["query"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
tokio = { version = "=1.52.3", features = ["full"] }
tracing = "=0.1.44"
tracing-appender = "=0.2.5"
tracing-flame = "=0.2.0"
tracing-futures = "=0.2.5"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
url = "=2.5.8"
zstd = "=0.13.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "=0.62.2", features = [
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
] }

[build-dependencies]
bindgen = "=0.72.1"
cc = "=1.2.63"
cmake = "=0.1.58"

[features]
ci = []


[package.metadata.cross.target.aarch64-unknown-linux-gnu]
dockerfile = ".github/cross-aarch64.Dockerfile"

[package.metadata.cross.target.armv7-unknown-linux-gnueabihf]
dockerfile = ".github/cross-armhf.Dockerfile"
